fix: blockquote overflow

--- a/themes/bloodywood/assets/css/global.scss
+++ b/themes/bloodywood/assets/css/global.scss
@@ -17,6 +17,7 @@ blockquote {
 	margin: 0;
 	padding: 2px 30px;
 	border-left: 3px solid #0594cb;
+	overflow: auto;
 }
 
 a {
